# app-review-monitor

./: .env.example  .env.test  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: app-review-monitor.yml  app_review_monitor.yml  test.yml
app_review_monitor/: __init__.py  app_review_monitor.py  cli.py  config.py  core.py  errors.py  exceptions.py  logging.py  processed_reviews.json  utils.py
tests/: test_api.py  test_app.py  test_app_review_monitor.py  test_cli.py  test_config.py  test_core.py  test_errors.py  test_integration.py  test_logging.py  test_performance.py  test_reviews.py  test_security.py  test_slack.py  test_utils.py
